# esp32-lvgl-modbus

./: CMakeLists.txt  ESP32_ESPIDF_LVGL_V4.code-workspace  git_automation.bat  sdkconfig  sdkconfig.old
components/fonts/: CMakeLists.txt  my_custom_fonts.h  roboto_14.c  roboto_14.h  roboto_16.c  roboto_16.h  roboto_18.c  roboto_18.h  roboto_18_bold.c  roboto_18_bold.h  roboto_20.c  roboto_20.h  roboto_22.c  roboto_22.h  roboto_24.c  roboto_24.h  roboto_26.c  roboto_26.h  roboto_28.c  roboto_28.h  roboto_36.c  roboto_36.h  roboto_45.c  roboto_45.h
components/style_manager/: CMakeLists.txt  style_manager.c  style_manager.h
main/: CMakeLists.txt  home_content.c  home_content.h  lv_port_conf.h  main.c  manual_content.c  manual_content.h  modbus_content.c  modbus_content.h  modbus_handler.c  modbus_handler.h  program_content.c  program_content.h  rs485_handler.c  rs485_handler.h  screen_manager.c  screen_manager.h  testing_content.c  testing_content.h
